--- a/README
+++ b/README
@@ -6,3 +6,8 @@
 
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
+
+# G protein
+https://en.wikipedia.org/wiki/G_protein
+
+bemoeigurus at work
