--- a/README
+++ b/README
@@ -4,10 +4,14 @@
 
 'la bohemia' 
 
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
 # G protein
 https://en.wikipedia.org/wiki/G_protein
+
+# haloperidol
+https://en.wikipedia.org/wiki/Haloperidol
 
 bemoeigurus at work
