--- a/README
+++ b/README
@@ -5,13 +5,10 @@
 'la bohemia' 
 
 
-# haloperidol
-https://en.wikipedia.org/wiki/Haloperidol
-
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
-# G protein
-https://en.wikipedia.org/wiki/G_protein
+# camera
+https://en.wikipedia.org/wiki/Camera
 
 bemoeigurus at work
