--- a/README
+++ b/README
@@ -5,10 +5,13 @@
 'la bohemia' 
 
 
+# substantial nigra
+https://en.wikipedia.org/wiki/Substantia_nigra
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
 # camera
 https://en.wikipedia.org/wiki/Camera
 
-bemoeigurus at work
+bemoeigurus at work © 2021
