--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Substantia_nigra
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
+# IMAX
+https://en.wikipedia.org/wiki/IMAX
+
 # camera
 https://en.wikipedia.org/wiki/Camera
 
