--- a/README
+++ b/README
@@ -14,6 +14,9 @@ https://en.wikipedia.org/wiki/Ventral_tegmental_area
 # IMAX
 https://en.wikipedia.org/wiki/IMAX
 
+# 8K resolution
+https://en.wikipedia.org/wiki/8K_resolution
+
 # camera
 https://en.wikipedia.org/wiki/Camera
 
