--- a/README
+++ b/README
@@ -17,4 +17,7 @@ https://en.wikipedia.org/wiki/IMAX
 # 8K resolution
 https://en.wikipedia.org/wiki/8K_resolution
 
+# torture chamber
+https://en.wikipedia.org/wiki/Torture_chamber
+
 bemoeigurus at work © 2021
