--- a/README
+++ b/README
@@ -14,6 +14,9 @@ https://en.wikipedia.org/wiki/Ventral_tegmental_area
 # torture chamber
 https://en.wikipedia.org/wiki/Torture_chamber
 
+# serial killer
+https://en.wikipedia.org/wiki/Serial_killer
+
 # 8K resolution
 https://en.wikipedia.org/wiki/8K_resolution
 
