--- a/README
+++ b/README
@@ -20,4 +20,4 @@ https://en.wikipedia.org/wiki/Serial_killer
 # 8K resolution
 https://en.wikipedia.org/wiki/8K_resolution
 
-bemoeigurus at work © 2021
+bemoeigurus at work © 2002-2021
