--- a/README
+++ b/README
@@ -20,6 +20,9 @@ https://en.wikipedia.org/wiki/Torture_chamber
 # serial killer
 https://en.wikipedia.org/wiki/Serial_killer
 
+# doctor nekschot
+https://github.com/nondejus/doctor-nekschot
+
 # 8K resolution
 https://en.wikipedia.org/wiki/8K_resolution
 
