--- a/README
+++ b/README
@@ -17,4 +17,7 @@ https://en.wikipedia.org/wiki/Torture_chamber
 # doctor nekschot
 https://github.com/nondejus/doctor-nekschot
 
+# klikgebitje
+https://github.com/nondejus/klikgebitje
+
 bemoeigurus at work © 2002-2021
