--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Substantia_nigra
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
+# gamma-aminobutyricid acid
+https://en.wikipedia.org/wiki/Gamma-Aminobutyric_acid
+
 # torture chamber
 https://en.wikipedia.org/wiki/Torture_chamber
 
