--- a/README
+++ b/README
@@ -23,4 +23,4 @@ https://github.com/nondejus/doctor-nekschot
 # klikgebitje
 https://github.com/nondejus/klikgebitje
 
-bemoeigurus at work © 2002-2021
+bemoeigurus at work © 2021
