--- a/README
+++ b/README
@@ -17,6 +17,9 @@ https://en.wikipedia.org/wiki/Gamma-Aminobutyric_acid
 # torture chamber
 https://en.wikipedia.org/wiki/Torture_chamber
 
+# gaba roulette
+https://github.com/nondejus/gaba-roulette
+
 # doctor nekschot
 https://github.com/nondejus/doctor-nekschot
 
