--- a/README
+++ b/README
@@ -14,8 +14,8 @@ https://en.wikipedia.org/wiki/Ventral_tegmental_area
 # torture chamber
 https://en.wikipedia.org/wiki/Torture_chamber
 
-# roulette
-https://github.com/nondejus/roulette
+# dutch roulette
+https://github.com/nondejus/dutch-roulette
 
 # doctor nekschot
 https://github.com/nondejus/doctor-nekschot
